cluster/apps/wikijs/wikijs-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wikijs
  namespace: wikijs
spec:
  selector:
    app.kubernetes.io/instance: wikijs
    app.kubernetes.io/name: wiki
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
  type: ClusterIP
